[gd_scene load_steps=12 format=2]

[ext_resource path="res://PlatformerExample/MetaBoyPlatformer.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://PlatformerExample/PlatformerScene.gd" type="Script" id=3]
[ext_resource path="res://PlatformerExample/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://PlatformerExample/Anvil.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/progress.png" type="Texture" id=6]
[ext_resource path="res://UI/under.png" type="Texture" id=7]
[ext_resource path="res://PlatformerExample/bg_sprite_frames.tres" type="SpriteFrames" id=8]
[ext_resource path="res://PlatformerExample/theme.tres" type="Theme" id=9]
[ext_resource path="res://bg_music.mp3" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="PlatformerScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 250, 250 )
scale = Vector2( 5, 5 )
frames = ExtResource( 8 )

[node name="Blocks" type="Node2D" parent="."]

[node name="Block" type="StaticBody2D" parent="Blocks"]
position = Vector2( 26, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block"]
shape = SubResource( 1 )

[node name="Block2" type="StaticBody2D" parent="Blocks"]
position = Vector2( 90, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block2"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block2"]
shape = SubResource( 1 )

[node name="Block3" type="StaticBody2D" parent="Blocks"]
position = Vector2( 154, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block3"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block3"]
shape = SubResource( 1 )

[node name="Block4" type="StaticBody2D" parent="Blocks"]
position = Vector2( 218, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block4"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block4"]
shape = SubResource( 1 )

[node name="Block5" type="StaticBody2D" parent="Blocks"]
position = Vector2( 282, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block5"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block5"]
shape = SubResource( 1 )

[node name="Block6" type="StaticBody2D" parent="Blocks"]
position = Vector2( 346, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block6"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block6"]
shape = SubResource( 1 )

[node name="Block7" type="StaticBody2D" parent="Blocks"]
position = Vector2( 410, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block7"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block7"]
shape = SubResource( 1 )

[node name="Block8" type="StaticBody2D" parent="Blocks"]
position = Vector2( 474, 439 )

[node name="Sprite" type="Sprite" parent="Blocks/Block8"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block8"]
shape = SubResource( 1 )

[node name="Block10" type="StaticBody2D" parent="Blocks"]
position = Vector2( -81, 370 )

[node name="Sprite" type="Sprite" parent="Blocks/Block10"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block10"]
shape = SubResource( 1 )

[node name="Block11" type="StaticBody2D" parent="Blocks"]
position = Vector2( -81, 304 )

[node name="Sprite" type="Sprite" parent="Blocks/Block11"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block11"]
shape = SubResource( 1 )

[node name="Block12" type="StaticBody2D" parent="Blocks"]
position = Vector2( -81, 304 )

[node name="Sprite" type="Sprite" parent="Blocks/Block12"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block12"]
position = Vector2( 1, -66 )
shape = SubResource( 1 )

[node name="Block13" type="StaticBody2D" parent="Blocks"]
position = Vector2( 577, 371 )

[node name="Sprite" type="Sprite" parent="Blocks/Block13"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block13"]
shape = SubResource( 1 )

[node name="Block14" type="StaticBody2D" parent="Blocks"]
position = Vector2( 577, 305 )

[node name="Sprite" type="Sprite" parent="Blocks/Block14"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block14"]
shape = SubResource( 1 )

[node name="Block15" type="StaticBody2D" parent="Blocks"]
position = Vector2( 577, 305 )

[node name="Sprite" type="Sprite" parent="Blocks/Block15"]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/Block15"]
position = Vector2( 0, -66 )
shape = SubResource( 1 )

[node name="MetaBoyPlatformer" parent="." instance=ExtResource( 1 )]
position = Vector2( 250, 250 )
scale = Vector2( 2.5, 2.5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Coin" parent="." instance=ExtResource( 4 )]
position = Vector2( 118, -53 )

[node name="Anvil" parent="." instance=ExtResource( 5 )]
position = Vector2( 508, -41 )

[node name="Control" type="ColorRect" parent="."]
margin_right = 96.0
margin_bottom = 149.0
theme = ExtResource( 9 )
color = Color( 0.0862745, 0.0627451, 0.34902, 1 )

[node name="healthBar" type="TextureProgress" parent="Control"]
margin_left = 16.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 96.0
value = 100.0
rounded = true
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true

[node name="damageMeter" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 25.0
text = "Damage:"
align = 1
autowrap = true

[node name="scoreLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_top = 106.0
margin_right = 48.0
margin_bottom = 147.0
text = "Score: 
0"
align = 1
autowrap = true

[node name="btnResume" type="Button" parent="Control"]
pause_mode = 2
visible = false
margin_left = 206.0
margin_top = 16.0
margin_right = 322.0
margin_bottom = 50.0
text = "Resume"

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/btnResume" to="." method="_on_btnResume_pressed"]
